--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.36.0",
     "bootstrap": "^5.3.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
